--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: "nunito", sans-serif;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
